fix u_upwind, fix r_form missing one contour integral

--- a/IPCS-A.ipynb
+++ b/IPCS-A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9120827f-9309-4b8d-95fe-50d8389be229",
    "metadata": {},
    "outputs": [],
@@ -10,22 +10,24 @@
     "from mpi4py import MPI\n",
     "from dolfinx import mesh, io, fem\n",
     "from petsc4py.PETSc import ScalarType\n",
+    "import numpy as np\n",
     "import ufl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7715e1c1-14a4-4f22-879a-09205242b8ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "# simulation parameters\n",
-    "MESH_CORNERS=((0.0, 0.0), (2.0, 1.0))\n",
+    "MESH_CORNERS=((0.0, 0.0), (1.0, 1.0))\n",
     "N = (16, 16)\n",
     "TIME_STEP = 0.01\n",
-    "FINAL_TIME = 2\n",
-    "PRESSURE_CORRECTION_TOLERANCE = 1e-5"
+    "FINAL_TIME = 0.05\n",
+    "PRESSURE_CORRECTION_TOLERANCE = 1e-3\n",
+    "DEBUG = True"
    ]
   },
   {
@@ -44,7 +46,7 @@
     "rho = fem.Constant(domain, ScalarType(1.0)) # fluid density\n",
     "mu = fem.Constant(domain, ScalarType(0.005)) # fluid viscosity\n",
     "\n",
-    "from math import pi, tan\n",
+    "from math import pi, tan, exp\n",
     "smallest_angle = pi/4 # get smaller angle in mesh with help of external software\n",
     "k_mu = ScalarType(18*mu/tan(smallest_angle)) # SI penalty, asumed constant viscosity and polynomials of deegre 2\n",
     "# see https://doi.org/10.1016/j.cam.2006.08.029 eq. (48)"
@@ -70,15 +72,21 @@
     "u_n_1 = fem.Function(velocity_function_space) # two time step before (known)\n",
     "# initialized as zero, so initial condition is u(x, 0) = 0\n",
     "\n",
-    "w = fem.Function(velocity_function_space, name=\"w\") \n",
-    "w.x.array[:] = 2 * u_n.x.array - u_n_1.x.array\n",
+    "x = ufl.SpatialCoordinate(domain)\n",
+    "decay_factor =  exp(-2 * np.pi ** 2 * mu * TIME_STEP)\n",
+    "u_n_1.interpolate(lambda x: np.vstack((-np.sin(np.pi * x[1]) * np.cos(np.pi * x[0]),\n",
+    "                                          np.sin(np.pi * x[0]) * np.cos(np.pi * x[1]))))\n",
+    "u_n.interpolate(lambda x: np.vstack((-np.sin(np.pi * x[1]) * np.cos(np.pi * x[0]) * decay_factor,\n",
+    "                                          np.sin(np.pi * x[0]) * np.cos(np.pi * x[1]) * decay_factor)))\n",
     "\n",
-    "# !!! FALTAN CONDICIONES DE FRONTERA (o no?)"
+    "\n",
+    "w = fem.Function(velocity_function_space, name=\"w\") \n",
+    "w.x.array[:] = 2 * u_n.x.array - u_n_1.x.array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "50f07d0d-d0d6-4f83-b3dd-f1ee5cde0789",
    "metadata": {},
    "outputs": [],
@@ -93,23 +101,24 @@
     "diff_coef_3 = fem.Constant(domain, 0.0)\n",
     "\n",
     "n = FacetNormal(domain)\n",
-    "u_upwind = conditional(ge(dot(u_n('+'), n('+')), 0), u('+'), u('-')) # uses previous solution to get upwind direction \n",
+    "u_upwind = conditional(ge(dot(w('+'), n('+')), 0), u('+'), u('-')) # uses previous solution to get upwind direction \n",
     "\n",
     "# define forms and allocate matrices\n",
     "m_form = (rho/TIME_STEP) * diff_coef_1 * dot(u, v) * dx\n",
     "m_compiled = fem.form(m_form)\n",
     "M = create_matrix(m_compiled)\n",
     "\n",
-    "# !!! EN TODAS LAS FORMS REVISAR LO DE GRAD Y NABLA_GRAD\n",
     "# w('+') no estaba en el paper, lo inclui porque si no daba error\n",
+    "# PUEDE QUE OUTER SEA AL REVÉS\n",
     "r_form = - dot(u, div(rho * outer(v, w))) * dx \\\n",
     "         + dot(w, n * dot(u, rho*v)) * ds \\\n",
     "         + dot(w('+'), n('+') * dot(u_upwind, jump(rho*v))) * dS \\\n",
     "         + mu * inner(grad(u) + transpose(grad(u)), grad(v)) * dx \\\n",
     "         + k_mu * dot(jump(u), jump(v)) * dS \\\n",
     "         - dot(dot(mu*(grad(u) + transpose(grad(u))), n), v) * ds \\\n",
-    "         - dot(dot(avg(mu*(grad(v) + transpose(grad(v)))), n('+')), jump(u)) * dS \\\n",
-    "         - dot(dot(avg(mu*(grad(u) + transpose(grad(u)))), n('+')), jump(v)) * dS \n",
+    "         - dot(dot(avg(mu*(grad(u) + transpose(grad(u)))), n('+')), jump(v)) * dS \\\n",
+    "         - dot(dot(mu*(grad(v) + transpose(grad(v))), n), u) * ds \\\n",
+    "         - dot(dot(avg(mu*(grad(v) + transpose(grad(v)))), n('+')), jump(u)) * dS \n",
     "r_compiled = fem.form(r_form)\n",
     "R = create_matrix(r_compiled)\n",
     "\n",
@@ -120,7 +129,7 @@
     "B = create_matrix(b_compiled)\n",
     "\n",
     "c_form = - dot(u, grad(q)) * dx \\\n",
-    "         + dot(jump(u), n('+')) * jump(q) * dS \\\n",
+    "         + dot(avg(u), n('+')) * jump(q) * dS \\\n",
     "         + dot(u, n) * q * ds \n",
     "c_compiled = fem.form(c_form)\n",
     "C = create_matrix(c_compiled)\n",
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8ed53804-3841-4cc9-b9e3-24a630556389",
    "metadata": {},
    "outputs": [],
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "351ecc0a-a3bc-43bf-a6ad-f0af5858a9f5",
    "metadata": {},
    "outputs": [],
@@ -229,7 +238,6 @@
     "_, size_cols = B.getSizes()\n",
     "P = PETSc.Mat().createPython([size_rows, size_cols], context=PMat(B, C, solver_M))\n",
     "P.setUp()\n",
-    "# CREO QUE setOPerator de solver_M actualiza el mult interno de P, habria que verificar\n",
     "\n",
     "# initialize solver for pressure correction \n",
     "solver_pressure = PETSc.KSP().create()\n",
@@ -242,10 +250,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fc9e1a12-c799-462c-9140-3c6f24c1215d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time step: 1.0, pressure iteration 1, residue: 1.3169325013351296e+16.\n",
+      "Average pressure iteration runtime (seconds): 0.039483867200033274\n",
+      "Time step: 1.0, pressure iteration 2, residue: 2.9127283167377994e+30.\n",
+      "Average pressure iteration runtime (seconds): 0.7862506655000289\n",
+      "Time step: 1.0, pressure iteration 3, residue: 5.063201204862676e+44.\n",
+      "Average pressure iteration runtime (seconds): 0.9659798142\n",
+      "Time step: 1.0, pressure iteration 4, residue: 1.8638153767558506e+59.\n",
+      "Average pressure iteration runtime (seconds): 0.3912366784999904\n",
+      "Time step: 1.0, pressure iteration 5, residue: 3.6251518430760655e+73.\n",
+      "Average pressure iteration runtime (seconds): 0.3093323786999463\n",
+      "Time step: 1.0, pressure iteration 6, residue: 7.185278191349081e+86.\n",
+      "Average pressure iteration runtime (seconds): 2.793013537600018\n",
+      "Time step: 1.0, pressure iteration 7, residue: 1.0327111070062488e+101.\n",
+      "Average pressure iteration runtime (seconds): 0.3072661691000576\n",
+      "Time step: 1.0, pressure iteration 8, residue: 3.0378431540388212e+115.\n",
+      "Average pressure iteration runtime (seconds): 0.33623478720001004\n",
+      "Time step: 1.0, pressure iteration 9, residue: 2.2947146646677125e+129.\n",
+      "Average pressure iteration runtime (seconds): 0.3120158330999402\n",
+      "Time step: 1.0, pressure iteration 10, residue: 9.495361465350158e+143.\n",
+      "Average pressure iteration runtime (seconds): 0.3427207257999726\n",
+      "Time step: 1.0, pressure iteration 11, residue: 2.3017754880831553e+145.\n",
+      "Average pressure iteration runtime (seconds): 0.29927453560003414\n",
+      "Time step: 1.0, pressure iteration 12, residue: 1.3169325013351296e+16.\n",
+      "Average pressure iteration runtime (seconds): 0.4758127185000376\n",
+      "Time step: 1.0, pressure iteration 13, residue: 2.9127283167377994e+30.\n",
+      "Average pressure iteration runtime (seconds): 0.039925996300007684\n",
+      "Time step: 1.0, pressure iteration 14, residue: 5.063201204862676e+44.\n"
+     ]
+    }
+   ],
    "source": [
     "from dolfinx.fem.petsc import assemble_matrix, assemble_vector\n",
     "\n",
@@ -259,10 +307,14 @@
     "p_file = io.VTXWriter(domain.comm, \"p.bp\", p_write)\n",
     "u_file.write(time)\n",
     "p_file.write(time)\n",
-    "    \n",
+    "\n",
     "while time < FINAL_TIME:\n",
+    "    if DEBUG:\n",
+    "        i = 0\n",
+    "        start_iter = perf_counter()\n",
+    "    \n",
     "    # iterative pressure correction\n",
-    "    while True:    \n",
+    "    while True:  \n",
     "        # step 1: aproximate velocity u_star\n",
     "        # RHS = d - B dot p_guess\n",
     "        rhs_velocity = d.copy() \n",
@@ -276,7 +328,7 @@
     "\n",
     "        # solve for u_star\n",
     "        u_star = d.duplicate()  # create vector with same size as d\n",
-    "        solver_velocity.setOperators(A)\n",
+    "        solver_velocity.setOperators(A) # !! SET OPERATOR NO VA ACA\n",
     "        solver_velocity.solve(rhs_velocity, u_star)\n",
     "        \n",
     "        # step 2: pressure correction\n",
@@ -297,6 +349,7 @@
     "        rhs_pressure.axpy(1.0, temp)\n",
     "\n",
     "        # LHS = C*inv(M)*B = P\n",
+    "        # !!! LOS SET OPERATORS VAN UN CICLO MAS AFUERA, YA QUE ACA ADENTRO NO CAMBIAN\n",
     "        solver_pressure.setOperators(P) \n",
     "\n",
     "        # solve for p_new\n",
@@ -319,9 +372,21 @@
     "        u_residue = u_star.copy()\n",
     "        u_residue.axpy(-1.0, u_new)\n",
     "        if u_residue.norm() <= PRESSURE_CORRECTION_TOLERANCE:\n",
+    "            if DEBUG:\n",
+    "                print(f\"Time step: {time/TIME_STEP}, finished pressure correction iterations.\")\n",
     "            break\n",
     "\n",
-    "    # !!!! AAAA hacer el paso de la proyeccion a espacio libre de divergencia (lagrange continuo)\n",
+    "        if DEBUG:\n",
+    "            i += 1\n",
+    "            if i%1==0:\n",
+    "                print(f\"Time step: {time/TIME_STEP}, pressure iteration {i}, residue: {u_residue.norm()}.\")\n",
+    "                temp = start_iter\n",
+    "                start_iter = perf_counter()\n",
+    "                print(f\"Average pressure iteration runtime (seconds): {(start_iter - temp)/10}\")\n",
+    "\n",
+    "            \n",
+    "\n",
+    "    \n",
     "    # re-assign u_n, u_n_1 and w considering new solution\n",
     "    u_n_1.x.array[:] = u_n.x.array\n",
     "    u_n.x.array[:] = u_new.getArray()\n",
@@ -331,19 +396,16 @@
     "    p_write.x.array[:] = p_new.getArray()\n",
     "    u_file.write(time)\n",
     "    p_file.write(time)\n",
-    "\n",
-    "    # !!! REVISAR SI HACE DIFERENCIA zeroEntries()\n",
+    "    \n",
     "    # re-assemble time dependent forms\n",
     "    R.zeroEntries()\n",
     "    assemble_matrix(R, r_compiled)\n",
     "    R.assemble()\n",
     "\n",
-    "    # si es necesario apply lifting pa ponerle condiciones de frontera\n",
     "    d.zeroEntries()\n",
     "    assemble_vector(d, d_compiled)\n",
     "    d.assemble()\n",
     "    \n",
-    "    # en caso de ponerle condiciones de frontera, salen de C\n",
     "    e.zeroEntries()\n",
     "    assemble_vector(e, e_compiled)\n",
     "    e.assemble()\n",
@@ -362,6 +424,14 @@
     "u_file.close()\n",
     "p_file.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f2e499a-5278-4119-a9a8-7d5a7401e5c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
