minor fix: decay_factor u_n_1

--- a/IPCS-A.ipynb
+++ b/IPCS-A.ipynb
@@ -46,7 +46,7 @@
     "rho = fem.Constant(domain, ScalarType(1.0)) # fluid density\n",
     "mu = fem.Constant(domain, ScalarType(0.005)) # fluid viscosity\n",
     "\n",
-    "from math import pi, tan, exp\n",
+    "from math import pi, tan\n",
     "smallest_angle = pi/4 # get smaller angle in mesh with help of external software\n",
     "k_mu = ScalarType(18*mu/tan(smallest_angle)) # SI penalty, asumed constant viscosity and polynomials of deegre 2\n",
     "# see https://doi.org/10.1016/j.cam.2006.08.029 eq. (48)"
@@ -72,8 +72,7 @@
     "u_n_1 = fem.Function(velocity_function_space) # two time step before (known)\n",
     "# initialized as zero, so initial condition is u(x, 0) = 0\n",
     "\n",
-    "x = ufl.SpatialCoordinate(domain)\n",
-    "decay_factor =  exp(-2 * np.pi ** 2 * mu * TIME_STEP)\n",
+    "decay_factor =  np.exp(-2.0 * np.pi * np.pi * mu.value * TIME_STEP)\n",
     "u_n_1.interpolate(lambda x: np.vstack((-np.sin(np.pi * x[1]) * np.cos(np.pi * x[0]),\n",
     "                                          np.sin(np.pi * x[0]) * np.cos(np.pi * x[1]))))\n",
     "u_n.interpolate(lambda x: np.vstack((-np.sin(np.pi * x[1]) * np.cos(np.pi * x[0]) * decay_factor,\n",
@@ -250,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc9e1a12-c799-462c-9140-3c6f24c1215d",
+   "execution_count": 8,
+   "id": "052b7a55-a209-43f3-a5a4-37cdf61450df",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -264,33 +263,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time step: 1.0, pressure iteration 1, residue: 1.3169325013351296e+16.\n",
-      "Average pressure iteration runtime (seconds): 0.039483867200033274\n",
-      "Time step: 1.0, pressure iteration 2, residue: 2.9127283167377994e+30.\n",
-      "Average pressure iteration runtime (seconds): 0.7862506655000289\n",
-      "Time step: 1.0, pressure iteration 3, residue: 5.063201204862676e+44.\n",
-      "Average pressure iteration runtime (seconds): 0.9659798142\n",
-      "Time step: 1.0, pressure iteration 4, residue: 1.8638153767558506e+59.\n",
-      "Average pressure iteration runtime (seconds): 0.3912366784999904\n",
-      "Time step: 1.0, pressure iteration 5, residue: 3.6251518430760655e+73.\n",
-      "Average pressure iteration runtime (seconds): 0.3093323786999463\n",
-      "Time step: 1.0, pressure iteration 6, residue: 7.185278191349081e+86.\n",
-      "Average pressure iteration runtime (seconds): 2.793013537600018\n",
-      "Time step: 1.0, pressure iteration 7, residue: 1.0327111070062488e+101.\n",
-      "Average pressure iteration runtime (seconds): 0.3072661691000576\n",
-      "Time step: 1.0, pressure iteration 8, residue: 3.0378431540388212e+115.\n",
-      "Average pressure iteration runtime (seconds): 0.33623478720001004\n",
-      "Time step: 1.0, pressure iteration 9, residue: 2.2947146646677125e+129.\n",
-      "Average pressure iteration runtime (seconds): 0.3120158330999402\n",
-      "Time step: 1.0, pressure iteration 10, residue: 9.495361465350158e+143.\n",
-      "Average pressure iteration runtime (seconds): 0.3427207257999726\n",
-      "Time step: 1.0, pressure iteration 11, residue: 2.3017754880831553e+145.\n",
-      "Average pressure iteration runtime (seconds): 0.29927453560003414\n",
-      "Time step: 1.0, pressure iteration 12, residue: 1.3169325013351296e+16.\n",
-      "Average pressure iteration runtime (seconds): 0.4758127185000376\n",
-      "Time step: 1.0, pressure iteration 13, residue: 2.9127283167377994e+30.\n",
-      "Average pressure iteration runtime (seconds): 0.039925996300007684\n",
-      "Time step: 1.0, pressure iteration 14, residue: 5.063201204862676e+44.\n"
+      "Time step: 1.0, pressure iteration 1, residue: 4186486075662565.5.\n",
+      "Time step: 1.0, pressure iteration 2, residue: 2.714655765900291e+29.\n",
+      "Time step: 1.0, pressure iteration 3, residue: 9.561229205776823e+42.\n",
+      "Time step: 1.0, pressure iteration 4, residue: 1.1355606405105007e+57.\n",
+      "Time step: 1.0, pressure iteration 5, residue: 1.4637610955162716e+71.\n",
+      "Time step: 1.0, pressure iteration 6, residue: 1.5933608180573507e+84.\n",
+      "Time step: 1.0, pressure iteration 7, residue: 1.26473437804133e+98.\n",
+      "Time step: 1.0, pressure iteration 8, residue: 2.1871312667445228e+111.\n",
+      "Time step: 1.0, pressure iteration 9, residue: 1.6506210455327518e+125.\n",
+      "Time step: 1.0, pressure iteration 10, residue: 4.855941662527156e+138.\n",
+      "Time step: 1.0, pressure iteration 11, residue: 1.0890343693284702e+140.\n",
+      "Time step: 1.0, pressure iteration 12, residue: 2.033684626524908e+16.\n",
+      "Time step: 1.0, pressure iteration 13, residue: 6.283429150279086e+30.\n",
+      "Time step: 1.0, pressure iteration 14, residue: 3.0109010955547414e+45.\n",
+      "Time step: 1.0, pressure iteration 15, residue: 6.1177658574166e+59.\n",
+      "Time step: 1.0, pressure iteration 16, residue: 1.454501228910427e+74.\n",
+      "Time step: 1.0, pressure iteration 17, residue: 1.15013197517109e+88.\n",
+      "Time step: 1.0, pressure iteration 18, residue: 1.0810226800898293e+102.\n",
+      "Time step: 1.0, pressure iteration 19, residue: 1.6918980289467322e+116.\n",
+      "Time step: 1.0, pressure iteration 20, residue: 1.3635604525864857e+130.\n",
+      "Time step: 1.0, pressure iteration 21, residue: 8.596625801123583e+143.\n",
+      "Time step: 1.0, pressure iteration 22, residue: 1.7112165018338684e+145.\n",
+      "Time step: 1.0, pressure iteration 23, residue: 2.033684626524908e+16.\n",
+      "Time step: 1.0, pressure iteration 24, residue: 6.283429150279086e+30.\n",
+      "Time step: 1.0, pressure iteration 25, residue: 3.0109010955547414e+45.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 96\u001b[0m\n\u001b[1;32m     94\u001b[0m             \u001b[38;5;66;03m#print(f\"Average pressure iteration runtime (seconds): {(start_iter - temp)/10}\")\u001b[39;00m\n\u001b[1;32m     95\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m i\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m25\u001b[39m: \u001b[38;5;66;03m# debug\u001b[39;00m\n\u001b[0;32m---> 96\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# re-assign u_n, u_n_1 and w considering new solution\u001b[39;00m\n\u001b[1;32m    102\u001b[0m u_n_1\u001b[38;5;241m.\u001b[39mx\u001b[38;5;241m.\u001b[39marray[:] \u001b[38;5;241m=\u001b[39m u_n\u001b[38;5;241m.\u001b[39mx\u001b[38;5;241m.\u001b[39marray\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -301,7 +309,7 @@
     "\n",
     "time = TIME_STEP # not 0, initial conditions are given\n",
     "p_guess = PETSc.Vec().createMPI(B.getSizes()[1])\n",
-    "p_guess.set(0.0)  # initial guess for initial time: zero pressure\n",
+    "p_guess.set(2.0)  # initial guess for initial time: zero pressure\n",
     "\n",
     "u_file = io.VTXWriter(domain.comm, \"u.bp\", u_n)\n",
     "p_file = io.VTXWriter(domain.comm, \"p.bp\", p_write)\n",
@@ -383,6 +391,7 @@
     "                temp = start_iter\n",
     "                start_iter = perf_counter()\n",
     "                print(f\"Average pressure iteration runtime (seconds): {(start_iter - temp)/10}\")\n",
+    "            \n",
     "\n",
     "            \n",
     "\n",
@@ -429,6 +438,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f2e499a-5278-4119-a9a8-7d5a7401e5c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([1, 2, 3])\n",
+    "np.exp(-4.0*pi*pi*mu.value*time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f8071ad-71ca-4b31-9634-a51ae0ff255e",
    "metadata": {},
    "outputs": [],
    "source": []
