script notebook to py, ipcs implementation with MPI

--- a/volume_lid_driven/ipcs_lid_driven_MPI.ipynb
+++ b/volume_lid_driven/ipcs_lid_driven_MPI.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "domain = mesh.create_unit_cube(MPI.COMM_WORLD, n_cells, n_cells, n_cells)\n",
+    "domain = mesh.create_unit_cube(MPI.COMM_WORLD, n_cells, n_cells, n_cells) # !!! ACA ESPECIFICAR GHOST MODE\n",
     "velocity_function_space = fem.functionspace(domain, (\"Lagrange\", 2, (3,))) \n",
     "pressure_function_space = fem.functionspace(domain, (\"Lagrange\", 1))"
    ]
@@ -138,7 +138,12 @@
     "form3 = rho*dot((u - u_sol), v)*dx \\\n",
     "      + dt*dot(nabla_grad(p_sol - p_prev), v)*dx\n",
     "bilinear3 = lhs(form3)\n",
-    "linear3 = rhs(form3)"
+    "linear3 = rhs(form3)\n",
+    "\n",
+    "# !! ENSAMBLAR LAS FORMAS QUE NO DEPENDEN DEL TIEMPO ACA, UNA UNICA VEZ\n",
+    "# ENSAMBLAR LOS VECTORES Y MATRICES INDIVIDUALMENTE APLICANDO BCS, AL \n",
+    "# APPLY_LIFTING, LUEGO SCATTER REVERSE Y FORWARD, LUEGO SET_BCS AL VECTOR\n",
+    "# !! INICIALIZAR LOS SOLVERS DE PETSC"
    ]
   },
   {
@@ -150,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2736c5f4033b425cb61b995d462cd5a8",
+       "model_id": "83cebbc2ea834ae6aee5b5b9a1602742",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,15 +165,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m t \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m dt\n\u001b[1;32m     17\u001b[0m problem1 \u001b[38;5;241m=\u001b[39m LinearProblem(bilinear1, linear1, bc_u, u_sol)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mproblem1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m problem2 \u001b[38;5;241m=\u001b[39m LinearProblem(bilinear2, linear2, bc_p, p_sol)\n\u001b[1;32m     21\u001b[0m problem2\u001b[38;5;241m.\u001b[39msolve()\n",
+      "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.12/dist-packages/dolfinx/fem/petsc.py:850\u001b[0m, in \u001b[0;36mLinearProblem.solve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    847\u001b[0m assemble_vector(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_b, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_L)\n\u001b[1;32m    849\u001b[0m \u001b[38;5;66;03m# Apply boundary conditions to the rhs\u001b[39;00m\n\u001b[0;32m--> 850\u001b[0m \u001b[43mapply_lifting\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_b\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_a\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbcs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbcs\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    851\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_b\u001b[38;5;241m.\u001b[39mghostUpdate(addv\u001b[38;5;241m=\u001b[39mPETSc\u001b[38;5;241m.\u001b[39mInsertMode\u001b[38;5;241m.\u001b[39mADD, mode\u001b[38;5;241m=\u001b[39mPETSc\u001b[38;5;241m.\u001b[39mScatterMode\u001b[38;5;241m.\u001b[39mREVERSE)\n\u001b[1;32m    852\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m bc \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbcs:\n",
+      "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.12/dist-packages/dolfinx/fem/petsc.py:672\u001b[0m, in \u001b[0;36mapply_lifting\u001b[0;34m(b, a, bcs, x0, alpha, constants, coeffs)\u001b[0m\n\u001b[1;32m    670\u001b[0m x0_r \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39marray_r \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m x0]\n\u001b[1;32m    671\u001b[0m b_local \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(b\u001b[38;5;241m.\u001b[39mlocalForm())\n\u001b[0;32m--> 672\u001b[0m \u001b[43m_assemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_lifting\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb_local\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray_w\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbcs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstants\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcoeffs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.12/dist-packages/dolfinx/fem/assemble.py:348\u001b[0m, in \u001b[0;36mapply_lifting\u001b[0;34m(b, a, bcs, x0, alpha, constants, coeffs)\u001b[0m\n\u001b[1;32m    346\u001b[0m _a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m form \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m form\u001b[38;5;241m.\u001b[39m_cpp_object \u001b[38;5;28;01mfor\u001b[39;00m form \u001b[38;5;129;01min\u001b[39;00m a]\n\u001b[1;32m    347\u001b[0m _bcs \u001b[38;5;241m=\u001b[39m [[bc\u001b[38;5;241m.\u001b[39m_cpp_object \u001b[38;5;28;01mfor\u001b[39;00m bc \u001b[38;5;129;01min\u001b[39;00m bcs0] \u001b[38;5;28;01mfor\u001b[39;00m bcs0 \u001b[38;5;129;01min\u001b[39;00m bcs]\n\u001b[0;32m--> 348\u001b[0m \u001b[43m_cpp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_lifting\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_a\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstants\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcoeffs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_bcs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "from dolfinx.fem.petsc import LinearProblem\n",
     "from tqdm.notebook import tqdm\n",
+    "from datetime import date\n",
     "\n",
     "t = 0\n",
-    "u_file = io.VTXWriter(domain.comm, \"volume/u18_03.bp\", u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, \"volume/p18_03.bp\", p_sol)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{date.today()}/velocity.bp\", u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{date.today()}/pressure.bp\", p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
     "\n",
@@ -177,6 +197,10 @@
     "for n in range(num_steps):\n",
     "    progress.update()\n",
     "    t += dt\n",
+    "\n",
+    "    # !!! PRIMERO INVESTIGAR BIEN QUE HACEN APPLY LIFTING, SCATTER Y SET BCS\n",
+    "    # !!! ACA ENSAMBLAR LOS VECTORES Y MATRICES (QUE DEPENDAN DEL TIEMPO) INDIVIDUALMENTE APLICANDO BCS, AL VECTOR\n",
+    "    # APPLY_LIFTING, LUEGO SCATTER REVERSE Y FORWARD, LUEGO SET_BCS AL VECTOR\n",
     "    \n",
     "    problem1 = LinearProblem(bilinear1, linear1, bc_u, u_sol)\n",
     "    problem1.solve()\n",
