fix: not updating u_prev, p_prev

--- a/volume_taylor_green/ipcs.ipynb
+++ b/volume_taylor_green/ipcs.ipynb
@@ -212,6 +212,9 @@
     "    \n",
     "        u_file.write(t)\n",
     "        p_file.write(t)\n",
+    "\n",
+    "        u_prev.x.array[:] = u_sol.x.array\n",
+    "        p_prev.x.array[:] = p_sol.x.array\n",
     "    \n",
     "        if i % 3 == 0:\n",
     "            # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
@@ -229,8 +232,9 @@
     "            \n",
     "            error_log.write('t = %.2f: error = %.3g' % (t, error) + \"\\n\")\n",
     "\n",
-    "    u_prev.x.array[:] = u_sol.x.array\n",
-    "    p_prev.x.array[:] = p_sol.x.array"
+    "progress.close()\n",
+    "u_file.close()\n",
+    "p_file.close()"
    ]
   }
  ],
