--- a/unit_square/ipcs.ipynb
+++ b/unit_square/ipcs.ipynb
@@ -199,6 +199,9 @@
     "        u_file.write(t)\n",
     "        p_file.write(t)\n",
     "        \n",
+    "        u_prev.x.array[:] = u_sol.x.array\n",
+    "        p_prev.x.array[:] = p_sol.x.array\n",
+    "        \n",
     "        if i % 10 == 0:\n",
     "            # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
     "            # con norma L_inf\n",
@@ -212,9 +215,9 @@
     "            error = error_abs / norm_u_e\n",
     "            \n",
     "            error_log.write('t = %.2f: error = %.3g' % (t, error) + \"\\n\")\n",
-    "    \n",
-    "        u_prev.x.array[:] = u_sol.x.array\n",
-    "        p_prev.x.array[:] = p_sol.x.array"
+    "\n",
+    "u_file.close()\n",
+    "p_file.close()"
    ]
   }
  ],
