--- a/volume_lid_driven/ipcs.ipynb
+++ b/volume_lid_driven/ipcs.ipynb
@@ -206,7 +206,11 @@
     "    p_file.write(t)\n",
     "\n",
     "    u_prev.x.array[:] = u_sol.x.array\n",
-    "    p_prev.x.array[:] = p_sol.x.array"
+    "    p_prev.x.array[:] = p_sol.x.array\n",
+    "\n",
+    "progress.close()\n",
+    "u_file.close()\n",
+    "p_file.close()"
    ]
   }
  ],
