--- a/pipe_with_cylinder/ipcs.ipynb
+++ b/pipe_with_cylinder/ipcs.ipynb
@@ -399,7 +399,6 @@
     "inlet_velocity = InletVelocity(t)\n",
     "u_inlet.interpolate(inlet_velocity)\n",
     "bcu_inflow = dirichletbc(u_inlet, locate_dofs_topological(velocity_space, fdim, ft.find(inlet_marker)))\n",
-    "\n",
     "# walls\n",
     "u_nonslip = np.array((0,) * domain.geometry.dim, dtype=PETSc.ScalarType)\n",
     "bcu_walls = dirichletbc(u_nonslip, locate_dofs_topological(velocity_space, fdim, ft.find(wall_marker)), velocity_space)\n",
@@ -428,6 +427,89 @@
     "u_prev = fem.Function(velocity_space) # guarda la solucion del tiempo anterior\n",
     "p_sol = fem.Function(pressure_space) \n",
     "p_prev = fem.Function(pressure_space)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6906212-fc6f-49af-aee4-9a31297674ca",
+   "metadata": {},
+   "source": [
+    "Formas variacionales para computar parámetros físicos que se comparan con los del benchmark\n",
+    "$$\n",
+    "C_{\\text{D}}(u,p,t,\\partial\\Omega_S) = \\frac{2}{\\rho L U_{mean}^2}\\int_{\\partial\\Omega_S}\\rho \\nu n \\cdot \\nabla u_{t_S}(t)n_y -p(t)n_x~\\mathrm{d} s,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "C_{\\text{L}}(u,p,t,\\partial\\Omega_S) = -\\frac{2}{\\rho L U_{mean}^2}\\int_{\\partial\\Omega_S}\\rho \\nu n \\cdot \\nabla u_{t_S}(t)n_x + p(t)n_y~\\mathrm{d} s,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "686d5e8b-5eed-40aa-8c32-05e4293b888b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = -FacetNormal(mesh)  # Normal pointing out of cylinder\n",
+    "dObs = Measure(\"ds\", domain=domain, subdomain_data=ft, subdomain_id=obstacle_marker)\n",
+    "u_t = inner(as_vector((n[1], -n[0])), u_sol)\n",
+    "drag = form(2 / 0.1 * (mu / rho * inner(grad(u_t), n) * n[1] - p_sol * n[0]) * dObs)\n",
+    "lift = form(-2 / 0.1 * (mu / rho * inner(grad(u_t), n) * n[0] + p_sol * n[1]) * dObs)\n",
+    "if mesh.comm.rank == 0:\n",
+    "    C_D = np.zeros(num_steps, dtype=PETSc.ScalarType)\n",
+    "    C_L = np.zeros(num_steps, dtype=PETSc.ScalarType)\n",
+    "    t_u = np.zeros(num_steps, dtype=np.float64)\n",
+    "    t_p = np.zeros(num_steps, dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9d6c779-0e2d-4c2a-8fef-6a536167a995",
+   "metadata": {},
+   "source": [
+    "Para el benchmark, hay que evaluar la presión en dos puntos, entonces hay que buscar las celdas que les corresponden para evaluar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3e349778-aea9-4a3b-b8fa-ed1894e035f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'domain' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdolfinx\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometry\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bb_tree, compute_collisions_points, compute_colliding_cells\n\u001b[0;32m----> 3\u001b[0m tree \u001b[38;5;241m=\u001b[39m bb_tree(\u001b[43mdomain\u001b[49m, domain\u001b[38;5;241m.\u001b[39mgeometry\u001b[38;5;241m.\u001b[39mdim)\n\u001b[1;32m      4\u001b[0m points \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m0.15\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0.25\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0\u001b[39m]])\n\u001b[1;32m      5\u001b[0m cell_candidates \u001b[38;5;241m=\u001b[39m compute_collisions_points(tree, points)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'domain' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from dolfinx.geometry import bb_tree, compute_collisions_points, compute_colliding_cells\n",
+    "\n",
+    "tree = bb_tree(domain, domain.geometry.dim)\n",
+    "points = np.array([[0.15, 0.2, 0], [0.25, 0.2, 0]])\n",
+    "cell_candidates = compute_collisions_points(tree, points)\n",
+    "colliding_cells = compute_colliding_cells(mesh, cell_candidates, points)\n",
+    "front_cells = colliding_cells.links(0)\n",
+    "back_cells = colliding_cells.links(1)\n",
+    "if mesh.comm.rank == 0:\n",
+    "    p_diff = np.zeros(num_steps, dtype=PETSc.ScalarType)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed9d55b0-ef9a-4198-9171-3bfd0ef1edef",
+   "metadata": {},
+   "source": [
+    "Forma variacional IPCS: \n",
+    "- linealización del termino convectivo usando el paso anterior\n",
+    "- discretización en el tiempo con diferencias finitas hacia atras"
    ]
   },
   {
@@ -511,28 +593,105 @@
     "for n in range(num_steps):\n",
     "    progress.update()\n",
     "    t += dt.value\n",
-    "    i += 1\n",
-    "\n",
-    "    u_bc.interpolate(lambda x: u_analytic(*x, t))\n",
-    "    p_bc.interpolate(lambda x: p_analytic(*x, t))\n",
-    "    bc_u  = fem.dirichletbc(u_bc, dofs_boundary_u)\n",
-    "    bc_p  = fem.dirichletbc(p_bc, dofs_boundary_p)\n",
+    "    inlet_velocity.t = t\n",
+    "    u_inlet.interpolate(inlet_velocity)\n",
     "    \n",
-    "    problem1 = LinearProblem(bilinear1, linear1, [bc_u], u_sol)\n",
+    "    problem1 = LinearProblem(bilinear1, linear1, bcu, u_sol)\n",
     "    problem1.solve()\n",
     "\n",
-    "    problem2 = LinearProblem(bilinear2, linear2, [bc_p], p_sol)\n",
+    "    problem2 = LinearProblem(bilinear2, linear2, bcp, p_sol)\n",
     "    problem2.solve()\n",
     "\n",
-    "    problem3 = LinearProblem(bilinear3, linear3, [bc_u], u_sol)\n",
+    "    problem3 = LinearProblem(bilinear3, linear3, bcu, u_sol)\n",
     "    problem3.solve()\n",
     "\n",
     "    u_file.write(t)\n",
     "    p_file.write(t)\n",
+    "    \n",
+    "    u_prev.x.array[:] = u_sol.x.array\n",
+    "    p_prev.x.array[:] = p_sol.x.array\n",
     "\n",
+    "    # calcular cantidades fisicas\n",
+    "    drag_coeff = mesh.comm.gather(assemble_scalar(drag), root=0)\n",
+    "    lift_coeff = mesh.comm.gather(assemble_scalar(lift), root=0)\n",
+    "    p_front = None\n",
+    "    if len(front_cells) > 0:\n",
+    "        p_front = p_sol.eval(points[0], front_cells[:1])\n",
+    "    p_front = mesh.comm.gather(p_front, root=0)\n",
+    "    p_back = None\n",
+    "    if len(back_cells) > 0:\n",
+    "        p_back = p_sol.eval(points[1], back_cells[:1])\n",
+    "    p_back = mesh.comm.gather(p_back, root=0)\n",
+    "    if mesh.comm.rank == 0:\n",
+    "        t_u[i] = t\n",
+    "        t_p[i] = t - dt / 2\n",
+    "        C_D[i] = sum(drag_coeff)\n",
+    "        C_L[i] = sum(lift_coeff)\n",
+    "        # Choose first pressure that is found from the different processors\n",
+    "        for pressure in p_front:\n",
+    "            if pressure is not None:\n",
+    "                p_diff[i] = pressure[0]\n",
+    "                break\n",
+    "        for pressure in p_back:\n",
+    "            if pressure is not None:\n",
+    "                p_diff[i] -= pressure[0]\n",
+    "                break\n",
     "\n",
-    "u_prev.x.array[:] = u_sol.x.array\n",
-    "p_prev.x.array[:] = p_sol.x.array"
+    "progress.close()\n",
+    "p_file.close()\n",
+    "u_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "505c029a-d63a-4a74-a31b-74cfb65a96f4",
+   "metadata": {},
+   "source": [
+    "### Resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dabb1d5-fd87-44e8-a43c-473270e630b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if mesh.comm.rank == 0:\n",
+    "    if not os.path.exists(\"figures\"):\n",
+    "        os.mkdir(\"figures\")\n",
+    "    num_velocity_dofs = velocity_space.dofmap.index_map_bs * velocity_space.dofmap.index_map.size_global\n",
+    "    num_pressure_dofs = pressure_space.dofmap.index_map_bs * velocity_space.dofmap.index_map.size_global\n",
+    "\n",
+    "    turek = np.loadtxt(\"benchmark_data/bdforces_lv4\") # !!!! no se cual archivo es\n",
+    "    turek_p = np.loadtxt(\"benchmark_data/pointvalues_lv4\")\n",
+    "    fig = plt.figure(figsize=(25, 8))\n",
+    "    l1 = plt.plot(t_u, C_D, label=r\"FEniCSx  ({0:d} dofs)\".format(num_velocity_dofs + num_pressure_dofs), linewidth=2)\n",
+    "    l2 = plt.plot(turek[1:, 1], turek[1:, 3], marker=\"x\", markevery=50,\n",
+    "                  linestyle=\"\", markersize=4, label=\"FEATFLOW (42016 dofs)\")\n",
+    "    plt.title(\"Drag coefficient\")\n",
+    "    plt.grid()\n",
+    "    plt.legend()\n",
+    "    plt.savefig(\"figures/drag_comparison.png\")\n",
+    "\n",
+    "    fig = plt.figure(figsize=(25, 8))\n",
+    "    l1 = plt.plot(t_u, C_L, label=r\"FEniCSx  ({0:d} dofs)\".format(\n",
+    "        num_velocity_dofs + num_pressure_dofs), linewidth=2)\n",
+    "    l2 = plt.plot(turek[1:, 1], turek[1:, 4], marker=\"x\", markevery=50,\n",
+    "                  linestyle=\"\", markersize=4, label=\"FEATFLOW (42016 dofs)\")\n",
+    "    plt.title(\"Lift coefficient\")\n",
+    "    plt.grid()\n",
+    "    plt.legend()\n",
+    "    plt.savefig(\"figures/lift_comparison.png\")\n",
+    "\n",
+    "    fig = plt.figure(figsize=(25, 8))\n",
+    "    l1 = plt.plot(t_p, p_diff, label=r\"FEniCSx ({0:d} dofs)\".format(num_velocity_dofs + num_pressure_dofs), linewidth=2)\n",
+    "    l2 = plt.plot(turek[1:, 1], turek_p[1:, 6] - turek_p[1:, -1], marker=\"x\", markevery=50,\n",
+    "                  linestyle=\"\", markersize=4, label=\"FEATFLOW (42016 dofs)\")\n",
+    "    plt.title(\"Pressure difference\")\n",
+    "    plt.grid()\n",
+    "    plt.legend()\n",
+    "    plt.savefig(\"figures/pressure_comparison.png\")"
    ]
   }
  ],
